# whisper-on-speed

./: .gitignore  README.md  pyproject.toml
notebooks/: experiment.ipynb
src/core/: asr.py  config.py  pipe.py  processor.py  replica.py
tests/: asr_benchmark_test.py  asr_test.py  conftest.py  test_utils.py
tests/benchmark_results/: batch_transcription_20250618_232555.json  batch_transcription_20250619_002219.json  batch_transcription_20250621_103336.json  batch_transcription_20250622_223428.json  batch_transcription_20250627_082303.json  batch_transcription_20250628_155922.json  batch_transcription_20250628_184112.json  batch_transcription_20250629_203010.json  cpu_vs_cuda_20250619_020959.json  cpu_vs_cuda_20250621_105509.json  cpu_vs_cuda_20250622_224942.json  cpu_vs_cuda_20250627_083742.json  cpu_vs_cuda_20250628_163817.json  cpu_vs_cuda_20250628_195443.json  single_transcription_20250618_232447.json  single_transcription_20250619_002114.json  single_transcription_20250621_103231.json  single_transcription_20250622_223236.json  single_transcription_20250627_082240.json  single_transcription_20250628_155859.json  single_transcription_20250628_184018.json  single_transcription_20250629_201725.json  warmup_comparison_20250618_232640.json  warmup_comparison_20250619_002303.json  warmup_comparison_20250621_103421.json  warmup_comparison_20250622_223534.json  warmup_comparison_20250627_082333.json  warmup_comparison_20250628_155939.json  warmup_comparison_20250628_184146.json  warmup_comparison_20250629_203026.json
tests/test_data/: output.json  whisper_audio.json
webserver/: Dockerfile  docker-compose.yml  pyproject.toml
webserver/app/: __init__.py  api.py  celery_app.py  config.json  config.py  schemas.py  tasks.py
